modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/parser/errors/array_consecutive_commas.gd
func test():
	# Arrays with consecutive commas are not allowed.
	var array = ["arrays",,,,]
